--- a/style.css
+++ b/style.css
@@ -64,7 +64,15 @@ h2 {
    font-size: 2rem;
 }
 
-
+@media screen and (max-width: 800px) {
+   h1 {
+      font-size: 2rem
+   }
+   #input_nums {
+      font-size: 1rem;
+   }
+ }
+ 
 
 
 
